<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="58dp">

        <TextView
            android:id="@+id/sort_by_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/sort_by_text"
            android:textColor="@color/light_purple"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/country_sort_by_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/sort_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_by_text_view"
            app:singleSelection="true">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/country_name_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkable="true"
                android:gravity="center"
                android:text="@string/country_name_btn"
                android:textColor="@color/light_purple"
                app:cornerRadius="4dp"
                app:strokeColor="@color/light_purple"
                app:strokeWidth="1dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/country_population_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkable="true"
                android:gravity="center"
                android:text="@string/population_btn"
                android:textColor="@color/light_purple"
                app:cornerRadius="4dp"
                app:strokeColor="@color/light_purple"
                app:strokeWidth="1dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/sort_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_sort_by_options"
            app:selectionRequired="true"
            app:singleSelection="true">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_asc_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkable="true"
                android:gravity="center"
                android:text="@string/sort_asc"
                android:textColor="@color/light_purple"
                app:cornerRadius="4dp"
                app:strokeColor="@color/light_purple"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_desc_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkable="true"
                android:gravity="center"
                android:text="@string/sort_desc"
                android:textColor="@color/light_purple"
                app:cornerRadius="4dp"
                app:strokeColor="@color/light_purple"
                app:strokeWidth="1dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
